...
            </objects>
            <point key="canvasLocation" x="-806" y="-569"/>
        </scene>
        <!--challengeTable-->
        <scene sceneID="SwF-w9-Nuf">
            <objects>
                <tableViewController title="challengeTable" id="ngi-Ll-5e6" customClass="ChallengeModeScoreTableViewController" customModule="geoapp" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1VX-h2-e3P">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="challengeScoreItemCell" rowHeight="120" id="GJq-D0-hs9" customClass="ChallengeModeScoreTableViewCell" customModule="geoapp" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GJq-D0-hs9" id="Fic-0O-Lwa">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HEt-1f-9fi">
                                            <rect key="frame" x="20" y="0.0" width="165.66666666666666" height="120"/>
                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="27"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                            <variation key="heightClass=regular-widthClass=regular">
                                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="37"/>
...
            </objects>
            <point key="canvasLocation" x="1328" y="-194"/>
        </scene>
        <!--normalTable-->
        <scene sceneID="Axx-12-sCU">
            <objects>
                <tableViewController title="normalTable" id="1KH-Sm-Pil" customClass="UserScoreTableViewController" customModule="geoapp" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Mmg-Sx-LrL">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="scoreItemCell" rowHeight="120" id="EHa-P4-bXv" customClass="UserScoreTableViewCell" customModule="geoapp" customModuleProvider="target">
...
            <point key="canvasLocation" x="2449" y="-569"/>
        </scene>
        <!--Challenge-->
        <scene sceneID="gkv-R8-L1Z">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pl8-o4-f2S" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Challenge" id="9DL-7D-p1J"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jKJ-9v-ID6">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="506" y="-193"/>
        </scene>
        <!--Normal-->
        <scene sceneID="f2a-hS-Igu">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SrE-e3-MHm" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Normal" id="QTg-kL-hhW"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ixK-SD-5Mi">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
