...
                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ul-h5-bsw">
                                <rect key="frame" x="269.66666666666669" y="84" width="124.33333333333331" height="30"/>
                                <color key="backgroundColor" red="0.90196078431372551" green="0.22352941176470587" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Sign Out">
                                    <color key="titleColor" red="0.94509803920000002" green="0.98039215690000003" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="logOut:" destination="zjO-aC-W5P" eventType="touchUpInside" id="TA8-cp-5IT"/>
                                    <segue destination="BVR-Zl-CGz" kind="show" id="TBj-VO-iYO"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agL-G6-PdY">
                                <rect key="frame" x="269.66666666666669" y="139" width="124.33333333333331" height="30"/>
                                <color key="backgroundColor" red="0.61176470588235299" green="0.68627450980392157" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Score Board">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="ljc-8D-RYH" kind="presentation" modalPresentationStyle="currentContext" modalTransitionStyle="flipHorizontal" id="txo-rd-0Bs"/>
                                </connections>
                            </button>
...
