...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmp-xJ-ePi">
                                        <rect key="frame" x="311.33333333333331" y="100" width="82.666666666666686" height="48"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                        <state key="normal" title="GUESS">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <variation key="heightClass=regular-widthClass=regular">
                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="27"/>
                                        </variation>
                                        <connections>
...
                                    <constraint firstAttribute="trailing" secondItem="hmp-xJ-ePi" secondAttribute="trailing" constant="20" id="gNu-3q-BL8"/>
                                    <constraint firstItem="cq8-hc-7Y2" firstAttribute="leading" secondItem="lo5-DA-OyB" secondAttribute="leading" constant="20" id="zK3-lF-koB"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="streetView"/>
                        <constraints>
                            <constraint firstItem="cq8-hc-7Y2" firstAttribute="height" secondItem="Ghc-Sk-aKv" secondAttribute="height" multiplier="0.0535714" id="7kW-HF-g1J"/>
                            <constraint firstItem="uD9-Fh-T0X" firstAttribute="trailing" secondItem="lo5-DA-OyB" secondAttribute="trailing" id="CoG-uU-6Iz"/>
                            <constraint firstAttribute="bottom" secondItem="lo5-DA-OyB" secondAttribute="bottom" id="Wv8-CS-zSp"/>
                            <constraint firstItem="gjZ-N4-vMs" firstAttribute="width" secondItem="Ghc-Sk-aKv" secondAttribute="width" multiplier="0.202899" id="YNG-Rv-hny"/>
                            <constraint firstItem="lo5-DA-OyB" firstAttribute="leading" secondItem="uD9-Fh-T0X" secondAttribute="leading" id="aD9-gu-iJc"/>
...
